<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QiaDeSi</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="tv_user">用户名:</string>
    <string name="tv_password">密码:</string>
	<string name="tv_phone">联系电话:</string>
	<string name="tv_id">身份证:</string>
	<string name="txt">*</string>
	<string name="cancle">取消</string>
	<string name="tv_address">南昌</string>
	<string name="img_bg_welcome">image</string>
	<string name="tv_welcome">饿货旅游</string>
	<string name="tv_hint">旅游景点  餐厅等</string>
	<string name="tv_first_img">附近美食</string>
	<string name="tv_second_img">周围景点</string>
	<string name="tv_three_img">附近酒店</string>
	<string name="tv_go_together">同城游玩</string>
	<string name="tv_shop">疯狂购物</string>
	<string name="tv_all">全部类别</string>
	
	<string name="txt1">月售</string>
	<string name="txt2">份</string>
	<string name="txt3">起送：¥</string>
	<string name="txt4">配送：¥</string>
	<string name="txt5">中国菜</string>
	<string name="txt6">营业时间：</string>
	<string name="txt7">商户地址：</string>
	<string name="txt8">00:00—00:00</string>
	<string name="txt9">休息中</string>
	<string name="txt10">北京市</string>
	<string name="txt11">60分钟</string>
	<string name="txt12">预计送达时间：</string>
	<string name="price">价格：</string>
	<string name="month_salse">月销量：</string>
	<string name="t0">0</string>
	<string name="tv_verif">验证码</string>
	<string name="btn_verif">获取验证码</string>
	<string name="btn_search">搜索</string>
	<string name="btn_fragement_login">登录</string>
	<string name="txt_fragement_login">还未登录请先登录</string>
	<string name="txt_fragement_name">姓名:</string>
	<string name="tv_remenber">记住密码:</string>
	<string name="txt_exit_login">退出登录</string>
	<string name="strAddress">送餐至:</string>
	<string name="strName">姓名:</string>
	<string name="strPhone">电话:</string>
	<string name="str_submit_menu">提交订单</string>
	<string name="str_edit_address">新增</string>
	
	<string name="pull_to_refresh">下拉刷新</string>
	<string name="release_to_refresh">松开刷新</string>
	<string name="last_update_time">最后更新时间:</string>
	
	<string name="push_to_load">下拉加载更多</string>
	<string name="release_to_load">松开加载更多</string>
	<string name="last_load">已经是最底端</string>
	
	<string name="share_friend">分享给微信好友</string>
	<string name="share_Circle_of_Friends">分享到朋友圈</string>
</resources>
