<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="#FFFFFF">
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="25sp"
        android:text="@string/tv_user"
        android:layout_marginLeft="30dp"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtUserName"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_marginLeft="30dp"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="25sp"
        android:text="@string/txt_fragement_name"
        android:layout_marginLeft="30dp"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtName"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_marginLeft="30dp"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="25sp"
        android:text="@string/tv_phone"
        android:layout_marginLeft="30dp"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPhone"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_marginLeft="30dp"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="25sp"
        android:text="@string/tv_id"
        android:layout_marginLeft="30dp"/>
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtID"
        android:textColor="#000000"
        android:textSize="25sp"
        android:layout_marginLeft="30dp" />
    
</LinearLayout>
