<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:background="#FA8072"
        >
        <com.android.volley.toolbox.NetworkImageView 
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/restaurant_page_iv_home_img"
            android:layout_alignParentLeft="true"
            android:background="@drawable/ic_launcher"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/restaurant_page_iv_home_img"
            android:id="@+id/restaurant_page_tv_home_name"
            />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_page_tv_cuisine"
            android:layout_toRightOf="@id/restaurant_page_iv_home_img"
            android:layout_below="@id/restaurant_page_tv_home_name"
            android:layout_alignLeft="@id/restaurant_page_tv_home_name"
            android:text="@string/txt5"
            android:textColor="#333333"/>
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_page_tv_star"
            android:layout_below="@id/restaurant_page_tv_home_name"
            android:layout_toRightOf="@id/restaurant_page_tv_cuisine"
            android:background="@drawable/iv0"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="3dp"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_page_tv_business_time"
            android:layout_toRightOf="@id/restaurant_page_iv_home_img"
            android:layout_below="@id/restaurant_page_tv_cuisine"
            android:text="@string/txt6"
            android:textColor="#333333"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_page_tv_time"
            android:layout_toRightOf="@id/restaurant_page_tv_business_time"
            android:layout_below="@id/restaurant_page_tv_cuisine"
            android:text="@string/txt8"
            android:textColor="#333333"
            android:layout_marginLeft="8dp"/>
        
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_page_tv_txtAddress"
            android:layout_toRightOf="@id/restaurant_page_iv_home_img"
            android:layout_below="@id/restaurant_page_tv_business_time"
            android:text="@string/txt7"
            android:textColor="#333333"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_page_tv_txtPreTime"
            android:layout_toRightOf="@id/restaurant_page_tv_txtAddress"
            android:layout_below="@id/restaurant_page_tv_business_time"
            android:text="@string/txt10"
            android:textColor="#333333"
            android:layout_marginLeft="8dp"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt12"
            android:layout_toRightOf="@id/restaurant_page_iv_home_img"
            android:layout_below="@id/restaurant_page_tv_txtPreTime"
            android:textColor="#333333"
            android:id="@+id/tv_time"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restaurant_page_tv_preTime"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@id/tv_time"
            android:layout_below="@id/restaurant_page_tv_txtPreTime"
            android:text="@string/txt11"
            android:textColor="#333333"
            android:layout_marginLeft="8dp"/>
        
    </RelativeLayout>
	<ListView 
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="9"
	    android:id="@+id/restaurant_page_iv_menu"
	    android:descendantFocusability="blocksDescendants"></ListView>
	<RelativeLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="0dp"
	    android:layout_weight="1"
	    android:gravity="center_vertical">
	    <ImageView 
	        android:layout_width="20dp"
	        android:layout_height="20dp"
	        android:contentDescription="@string/app_name"
	        android:id="@+id/ivTrolley"
	        android:background="@drawable/wrong"
	        android:layout_marginLeft="8dp"/>
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/ivTrolley"
	        android:id="@+id/tvTotal"/>
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#FF0000"
	        android:id="@+id/tvLastPrice"
	        android:layout_alignParentRight="true"/>
	</RelativeLayout>
</LinearLayout>
