<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_shape"
    android:gravity="center"
    android:padding="20dp">
        <TableRow 
            android:gravity="center"
            android:padding="5dp">
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/tv_user" 
		        android:textSize="30sp"
		        android:textColor="#000000"
		        android:gravity="right"/>
		    <EditText 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/etUser"
		        android:labelFor="@+id/etUser"
		        android:inputType="text"
		        android:textSize="30sp"
		        android:ems="4"
		        android:layout_marginLeft="15dp"
		        android:background="@drawable/edit_shape"
		        android:textColor="#000000"/>
	    </TableRow>
	    <TableRow 
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:padding="5dp">
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/tv_password" 
		        android:textSize="30sp"
		        android:textColor="#000000"
		        android:gravity="right"/>
		    <EditText 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/etPassword"
		        android:inputType="textPassword"
		        android:labelFor="@+id/etPassword"
		        android:textSize="30sp"
		        android:ems="4"
		        android:layout_marginLeft="15dp"
		        android:background="@drawable/edit_shape"
		        android:textColor="#000000"/>
	    </TableRow>
	    <TableRow 
	        android:gravity="center"
            android:layout_marginTop="20dp"
            android:padding="5dp">
	        <TextView 
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/tv_remenber" 
		        android:textSize="30sp"
		        android:textColor="#000000"
		        android:gravity="right"/>
	        <CheckBox
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:id="@+id/checkBoxremenber"
	            android:checked="true"></CheckBox>
	    </TableRow>
	    <TableRow 
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:padding="5dp">
	        <Button 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:id="@+id/btnLogin"
	            android:text="@string/btn_login"
	            style="?android:attr/buttonBarButtonStyle"
	            android:textSize="20sp"
	            android:background="@drawable/bg1_shape"
	            android:textColor="#0000CD"/>
	        <Button 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:id="@+id/btnRegister"
	            style="?android:attr/buttonBarButtonStyle"
	            android:text="@string/btn_register"
	            android:textSize="20sp"
	            android:background="@drawable/bg1_shape"
	            android:layout_marginLeft="15dp"
	            android:textColor="#CD0000"/>
	    </TableRow>
</TableLayout>
