<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.android.volley.toolbox.NetworkImageView  
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/ivMenu"
        android:contentDescription="@string/app_name"
        android:background="@drawable/ic_launcher"/>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toRightOf="@id/ivMenu">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/name"/>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/price"/>
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:id="@+id/price"/>
        </LinearLayout>
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/month_salse"/>
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:id="@+id/monthSalse"/>
        </LinearLayout>
    </LinearLayout>
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:orientation="horizontal"
	    android:layout_marginTop="20dp">
	    <Button 
	        android:layout_width="25dp"
	        android:layout_height="25dp"
	        android:id="@+id/minus"
	        android:background="@drawable/m"
	        android:visibility="gone"/>
	    <EditText 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:id="@+id/etNumber"
	        android:inputType="number"
	        android:ems="2"
	        android:labelFor="@id/etNumber"
	        android:text="@string/t0"
	        android:visibility="gone"/>
	    <Button 
	        android:layout_width="25dp"
	        android:layout_height="25dp"
	        android:id="@+id/add"
	        android:background="@drawable/a"
	        android:layout_marginRight="8dp"/>
	</LinearLayout>
</RelativeLayout>
