<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal">
		<TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textColor="#000000"
		    android:id="@+id/tvRestaurantName"
		    android:textSize="25sp"/>
		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    >
		    <TextView 
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/strAddress"
		        android:gravity="right"
		        android:textSize="20sp"/>
		    <Spinner 
		        android:layout_height="wrap_content"
		        android:layout_width="0dp"
		        android:layout_weight="2"
		        android:id="@+id/spAddress"
		        android:gravity="left"
		        android:textSize="20sp"/>
		    
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <TextView 
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/strName"
		        android:gravity="right"
		        android:textSize="20sp"/>
		    <TextView 
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:id="@+id/tvName"
		        android:gravity="left"
		        android:textSize="20sp"/>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <TextView 
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:text="@string/strPhone"
		        android:gravity="right"
		        android:textSize="20sp"/>
		    <TextView 
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="2"
		        android:id="@+id/tvPhone"
		        android:gravity="left"
		        android:textSize="20sp"/>
		</LinearLayout>
		<ListView 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:id="@+id/lvListMenu"
		    android:layout_gravity="center_horizontal"></ListView>
		<TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:id="@+id/totalPrice"
		    android:textSize="20sp"
		    android:layout_marginTop="30dp"/>
	</LinearLayout>
	<Button 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textSize="35sp"
	    android:layout_alignParentBottom="true"
	    android:text="@string/str_submit_menu"
	    android:background="#22FF11"/>
</RelativeLayout>
