<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearLayout"
    android:background="@drawable/bg1_shape"
    android:orientation="vertical"
    android:gravity="center">
    <TableLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
	    <TableRow 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:gravity="center">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/tv_user"
	            android:textColor="#000000"
	            android:layout_gravity="center_vertical"/>
	        <EditText 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:inputType="text"
	            android:id="@+id/etUserName"
	            android:labelFor="@+id/etUserName"
	            android:ems="6"
	            android:textSize="20sp"
	            android:layout_marginLeft="10dp"
	            android:textColor="#000000"/>
	        <TextView 
	            android:layout_width="20dp"
	            android:layout_height="20dp"
	            android:id="@+id/tvUserBc"
	            android:background="@drawable/wrong"
	            android:textColor="#FF0000"/>
	    </TableRow >
		<TableRow  
		    android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:gravity="center"
	        android:layout_marginTop="15dp">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/tv_password"
	            android:textColor="#000000"
	            android:layout_gravity="center_vertical"/>
	        <EditText 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:inputType="textPassword"
	            android:id="@+id/etUserPassword"
	            android:labelFor="@+id/etUserPassword"
	            android:ems="6"
	            android:textSize="20sp"
	            android:layout_marginLeft="10dp"
	            android:textColor="#000000"/>
	        <TextView 
	            android:layout_width="20dp"
	            android:layout_height="20dp"
	            android:id="@+id/tvPasswordBc"
	            android:background="@drawable/wrong"
	            android:textColor="#FF0000"/>
		</TableRow >
		<TableRow  
		    android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:gravity="center"
	        android:layout_marginTop="15dp">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/tv_phone"
	            android:textColor="#000000"
	            android:layout_gravity="center_vertical"/>
	        <EditText 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:inputType="phone"
	            android:id="@+id/etUserPhone"
	            android:labelFor="@+id/etUserPhone"
	            android:ems="6"
	            android:textSize="20sp"
	            android:layout_marginLeft="10dp"
	            android:textColor="#000000"/>
	        <TextView 
	            android:layout_width="20dp"
	            android:layout_height="20dp"
	            android:id="@+id/tvUserPhoneBc"
	            android:background="@drawable/wrong"
	            android:textColor="#FF0000"/>
		</TableRow >
		<TableRow  
		    android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:gravity="center"
	        android:layout_marginTop="15dp">
	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/tv_id"
	            android:textColor="#000000"
	            android:layout_gravity="center_vertical"/>
	        <EditText 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:inputType="phone"
	            android:id="@+id/etUserId"
	            android:labelFor="@+id/etUserId"
	            android:ems="6"
	            android:textSize="20sp"
	            android:layout_marginLeft="10dp"
	            android:textColor="#000000"/>
	        <TextView 
	            android:layout_width="20dp"
	            android:layout_height="20dp"
	            android:id="@+id/tvUserIdBc"
	            android:background="@drawable/wrong"
	            android:textColor="#FF0000"/>
		</TableRow >
		
	</TableLayout>

    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_verif"
            android:textColor="#000000"
            android:layout_gravity="center_vertical"
            />
        <EditText 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:id="@+id/etVerification"
            android:labelFor="@+id/etVerification"
            android:ems="4"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:textColor="#000000"/>
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnVerification"
            android:textColor="#000000"
            android:text="@string/btn_verif"/>
    </LinearLayout>
    
	<LinearLayout  
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp">
		<TextView 
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"/>
        <Button 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            android:layout_weight="2"
            android:id="@+id/userRegister"
            android:labelFor="@+id/userRegister"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/btn_register"
            android:background="@drawable/bg_shape"
            android:textSize="20sp"
            android:padding="10dp"/>
        <Button 
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="#000000"
            android:id="@+id/userCancle"
            android:labelFor="@+id/userCancle"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/cancle"
            android:background="@drawable/bg_shape"
            android:textSize="20sp"
            android:padding="10dp"
            android:layout_marginLeft="10dp"/>
        <TextView 
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"/>
	</LinearLayout >
</LinearLayout>